--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 mongo.json
+old.js
 
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm,node,react,dotenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm,node,react,dotenv
